--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
+    "node-cron": "^4.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.8.0",
+    "@types/node-cron": "^3.0.11",
     "@types/uuid": "^9.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.0"
